@@ -1,3 +1,8 @@
+[0, 15, 98]: 2019-07-09
+  - regenerate ext/_ruamel_yaml.c with Cython version 0.29.12, needed
+    for Python 3.8.0b2 (reported by `John Vandenberg
+    <https://bitbucket.org/%7B6d4e8487-3c97-4dab-a060-088ec50c682c%7D/>`__)
+
 [0, 15, 97]: 2019-06-06
   - regenerate ext/_ruamel_yaml.c with Cython version 0.29.10, needed for
     Python 3.8.0b1
